--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-control">
                     <input autofocus class="input input-bordered" maxlength="50" name="username" id="username"
-                           placeholder="아이디" type="text">
+                           placeholder="사용자 아이디 (이메일)" type="text">
                 </div>
 
                 <div class="form-control">
