--- a/src/main/resources/templates/member/useageHistory.html
+++ b/src/main/resources/templates/member/useageHistory.html
@@ -2,10 +2,6 @@
 <html layout:decorate="~{layout/layout.html}" xmlns:layout="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <script>
-
-
-    </script>
     <title>BOOKU_LUV 마이페이지</title>
 </head>
 <body class="bg-gray-100" layout:fragment="content">
@@ -45,19 +41,23 @@
             <!-- 좌측 메뉴 -->
             <div class="w-1/2 md:w-2/12 bg-white p-4 h-auto">
                 <ul class="space-y-4">
-                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between">
+                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
+                        th:onclick="|toggleSection('profileContent');|">
                         <span class="md:inline-block">내 정보</span>
                         <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
                     </li>
-                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between">
+                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
+                        th:onclick="|toggleSection('likesContent');|">
                         <span class="md:inline-block">내 좋아요</span>
                         <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
                     </li>
-                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between">
+                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
+                        th:onclick="|toggleSection('cartContent');|">
                         <span class="md:inline-block">장바구니</span>
                         <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
                     </li>
-                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between">
+                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
+                        th:onclick="|toggleSection('purchaseHistoryContent');|">
                         <span class="md:inline-block">구매내역</span>
                         <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
                     </li>
