결제 성공/실패 페이지, 장바구니, 정산 구현

--- a/src/main/resources/templates/order/fail.html
+++ b/src/main/resources/templates/order/fail.html
@@ -9,14 +9,14 @@
 </head>
 
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-<div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+<div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
     <div class="modal bg-white p-8 rounded shadow-md max-w-md w-full">
         <div class="bg-white p-8 rounded shadow-md max-w-md w-full">
             <h1 class="text-2xl font-semibold mb-4">결제가 취소되었습니다.</h1>
             <p class="text-gray-600 mb-4">결제 내용 입력이 잘못되었습니다. 다시 시도해주세요.</p>
         </div>
         <div class="flex justify-end">
-            <a href="#" class="bg-gray-500 hover:bg-gray-600 text-white py-2 px-4 rounded close-button">닫기</a>
+            <a href="/" class="bg-gray-500 hover:bg-gray-600 text-white py-2 px-4 rounded close-button">닫기</a>
         </div>
     </div>
 </div>
