--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,9 +13,9 @@
     <i class="fas fa-shopping-cart text-red-500 text-[50px]"></i>
   </div>
   <div class="mx-auto mt-10 max-w-screen-lg">
-    <table class="w-full ">
+    <table class="w-full">
       <tbody>
-      <tr>
+      <tr th:each="cartItem : ${cartItems}">
         <td>
           <div class="flex items-center justify-center">
             <input type="checkbox" class="w-[20px] h-[20px]">
@@ -23,31 +23,33 @@
         </td>
         <td class="px-4 py-2 w-60">
           <div class="flex justify-center">
-            <img src="https://i.postimg.cc/9MnXmgL2/image.jpg" class="w-[120px] h-[150px]">
+            <img th:src="${cartItem.product.coverImg}" class="w-[120px] h-[150px]">
           </div>
         </td>
         <td class="px-4 py-2 w-auto">
           <div>
-            <span class="block text-center">책제목</span>
-            <span class="block text-center">작가</span>
-            <span class="block text-center">출판사</span>
-            <span class="block text-center">가격</span>
+            <span th:text="${cartItem.product.title}" class="block text-center">책제목</span>
+            <span th:text="${cartItem.product.author}" class="block text-center">작가</span>
+            <span th:text="${cartItem.product.publisher}" class="block text-center">출판사</span>
+            <span th:text="${cartItem.product.priceSales}" class="block text-center">가격</span>
           </div>
         </td>
         <td>
           <div class="flex items-center justify-center">
-            <button>
+            <a th:href="@{/member/cart/{id}/{cartItemId}/delete(id=${member.id}, cartItemId=${cartItem.id})}">
               <i class="fas fa-times text-2xl"></i>
-            </button>
+            </a>
           </div>
         </td>
       </tr>
       </tbody>
     </table>
-    <div class="border-t mt-4 pt-4">
-    </div>
+    <div class="border-t mt-4 pt-4"></div>
     <div class="mt-[20px] flex justify-end w-full">
-      <button id="buyButton" class="ml-2 px-4 py-2 bg-green-500 w-24 text-white rounded text-center">구매</button>
+      <form th:action="@{/order/detail}">
+        <input type="hidden" name="productsId" th:value="${cartItems[0].product.id}">
+        <input type="submit" value="구매" class="btn btn-primary text-white">
+      </form>
     </div>
   </div>
 </div>
