--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -73,10 +73,15 @@
                     </div>
                     <div class="flex items-center mt-4 border-t pt-4">
                         <i id="likeIcon" class="far fa-heart text-2xl cursor-pointer"></i>
-                        <div class="flex justify-end w-full mr-[10px]">
-                            <button class="ml-2 px-4 py-2 w-24 btn btn-primary text-white">장바구니
-                            </button>
-                        </div>
+                        <form class="d-flex"  th:action="@{/member/cart/{id}/{productId}(id=${member.id}, productId=${products.id})}" method="post">
+                            <div class="flex justify-end w-full mr-[10px]">
+                                <input class="form-control text-center me-3" id="amount" name="amount" type="number" value="1"
+                                       style="max-width: 3rem"/>
+                                <button class="ml-2 px-4 py-2 w-24 btn btn-primary text-white" type="submit">
+                                    장바구니
+                                </button>
+                            </div>
+                        </form>
                         <form th:action="@{/order/detail}">
                             <input type="hidden" name="productsId" th:value="${products.id}">
                             <input type="submit" value="구매" class="btn btn-primary text-white">
