--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -222,7 +222,7 @@
                         <span>박 창 규</span>
                     </div>
                     <div class="mb-[10px]">
-                        <span>이메일 : wooyoung0407@naver.com</span>
+                        <span>이메일 : changgyu549@gmail.com</span>
                     </div>
                     <div class="mb-[10px]">
                         <span>Backend</span>
@@ -238,7 +238,7 @@
                         <span>황 인 성</span>
                     </div>
                     <div class="mb-[10px]">
-                        <span>이메일 : wooyoung0407@naver.com</span>
+                        <span>이메일 : insung5189@gmail.com</span>
                     </div>
                     <div class="mb-[10px]">
                         <span>Backend</span>
