--- a/src/main/resources/templates/member/useageHistory.html
+++ b/src/main/resources/templates/member/useageHistory.html
@@ -46,11 +46,11 @@
                         <span class="md:inline-block">내 정보</span>
                         <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
                     </li>
-                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
-                        th:onclick="|toggleSection('likesContent');|">
-                        <span class="md:inline-block">내 좋아요</span>
-                        <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>
-                    </li>
+<!--                    <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"-->
+<!--                        th:onclick="|toggleSection('likesContent');|">-->
+<!--                        <span class="md:inline-block">내 좋아요</span>-->
+<!--                        <span class="md:inline-block"><i class="fas fa-chevron-right"></i></span>-->
+<!--                    </li>-->
                     <li class="cursor-pointer py-2 px-4 rounded hover:bg-gray-200 md:flex md:justify-between"
                         th:onclick="|toggleSection('cartContent');|">
                         <span class="md:inline-block">장바구니</span>
