--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -207,7 +207,7 @@
                     </div>
             </div>
             <div class="flex items-center mt-4 border-t pt-4">
-                <i class="far fa-heart text-2xl cursor-pointer" id="likeIcon"></i>
+<!--                <i class="far fa-heart text-2xl cursor-pointer" id="likeIcon"></i>-->
                 <div class="flex justify-end w-full mr-[10px]">
                     <button class="ml-2 px-4 py-2 w-24 btn btn-primary text-white">
                         장바구니
@@ -353,7 +353,6 @@
         }
     });
 </script>
-
 </body>
 
 </html>
